HelloUltraviolet/Fixtures/RejectedSource/Statements/StatementParseError/Source/Main.uv
//! Rejected statement specimen for malformed statement recovery.

public procedure statementParseErrorReference() -> i32 {
    else
    return 1
}
